# libDemoC

./: .gitignore  CMakeLists.txt  README.md  app.c  environment.yml  mathlib.c  mathlib.h  pyproject.toml
exe/: CMakeLists.txt
python/: CMakeLists.txt
python/src/: main.cpp
python/src/lib_demo/: __init__.py
src/blas/: CMakeLists.txt  mathlib.c  mathlib.h
